[gd_scene load_steps=3 format=3 uid="uid://sfu1bae1py40"]

[ext_resource type="PackedScene" uid="uid://bme8v4sro26wh" path="res://Scenes/Settings/SettingsCategory.tscn" id="1_e6kyq"]
[ext_resource type="Script" path="res://Scenes/Settings/game_settings.gd" id="1_l7s4g"]

[node name="GameSettings" instance=ExtResource("1_e6kyq")]
script = ExtResource("1_l7s4g")

[node name="CategoryLabel" parent="." index="0"]
text = "Grid properties"

[node name="RowsInput" type="HBoxContainer" parent="SettingsContainer" index="0"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsContainer/RowsInput" index="0"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Rows:"
vertical_alignment = 1

[node name="SpinBox" type="SpinBox" parent="SettingsContainer/RowsInput" index="1"]
layout_mode = 2
size_flags_horizontal = 8
min_value = 1.0
max_value = 500.0
value = 20.0
rounded = true
select_all_on_focus = true

[node name="ColumnsInput" type="HBoxContainer" parent="SettingsContainer" index="1"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsContainer/ColumnsInput" index="0"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Columns:"
vertical_alignment = 1

[node name="SpinBox" type="SpinBox" parent="SettingsContainer/ColumnsInput" index="1"]
layout_mode = 2
size_flags_horizontal = 8
min_value = 1.0
max_value = 500.0
value = 20.0
rounded = true
select_all_on_focus = true

[node name="SquareGridOption" type="CheckButton" parent="SettingsContainer" index="2"]
layout_mode = 2
text = "Square Grid"

[node name="MineSetting" type="VBoxContainer" parent="SettingsContainer" index="3"]
layout_mode = 2

[node name="MinesLabel" type="Label" parent="SettingsContainer/MineSetting" index="0"]
layout_mode = 2
text = "Mines:"

[node name="MinesSlider" type="HSlider" parent="SettingsContainer/MineSetting" index="1"]
layout_mode = 2
min_value = 1.0
max_value = 99.0
step = 0.5
value = 10.0

[node name="MinesPercentLabel" type="Label" parent="SettingsContainer/MineSetting" index="2"]
layout_mode = 2
text = "10%"
horizontal_alignment = 1

[node name="FirstSafeOption" type="CheckButton" parent="SettingsContainer" index="4"]
layout_mode = 2
tooltip_text = "Ensures the first tile clicked is always safe."
button_pressed = true
text = "First Tile Safe"

[connection signal="value_changed" from="SettingsContainer/RowsInput/SpinBox" to="." method="_on_rows_input_value_changed"]
[connection signal="value_changed" from="SettingsContainer/ColumnsInput/SpinBox" to="." method="_on_columns_input_value_changed"]
[connection signal="toggled" from="SettingsContainer/SquareGridOption" to="." method="_on_square_grid_option_toggled"]
[connection signal="drag_ended" from="SettingsContainer/MineSetting/MinesSlider" to="." method="_on_mines_slider_drag_ended"]
[connection signal="drag_started" from="SettingsContainer/MineSetting/MinesSlider" to="." method="_on_mines_slider_drag_started"]
[connection signal="value_changed" from="SettingsContainer/MineSetting/MinesSlider" to="." method="_on_mines_slider_value_changed"]
[connection signal="toggled" from="SettingsContainer/FirstSafeOption" to="." method="_on_first_safe_option_toggled"]
